<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/place_autocomplete_search_hint"
    android:orientation="vertical"
    android:stretchColumns="1">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/orderLinesDetails_txtDetailsProductCode"
            android:layout_width="137dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="serif"
            android:text="@string/productcode"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/orderLineDetails_txtProductCode"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif"
            android:hint="@string/ProductCode"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/orderLinesDetails_txtDetailsProductName"
            android:layout_width="137dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="serif"
            android:text="@string/productname"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/orderLinesDetails_txtProductName"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif"
            android:hint="@string/ProductName"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif" />

    </TableRow>

    <TableRow android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/orderLinesDetails_txtDetailsDescription"
            android:layout_width="137dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="serif"
            android:text="@string/uom"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/orderLinesDetails_txtDescription"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif"
            android:hint="@string/UoM"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif" />

    </TableRow>


    <TableRow android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/orderLineDetails_txtDetailsqty"
            android:layout_width="137dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/qty" />

        <TextView
            android:id="@+id/orderLinesDetails_txtQty"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical|end"
            android:hint="@string/Qty"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif" />

    </TableRow>


    <TableRow android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/orderLinesDetails_txtDetailsprice"
            android:layout_width="137dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/price" />

        <TextView
            android:id="@+id/orderLinesDetails_txtUnitPrice"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical|end"
            android:hint="@string/Price"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif" />

    </TableRow>

    <TableRow android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/orderLinesDetails_txtDetailsamount"
            android:layout_width="137dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/amount" />

        <TextView
            android:id="@+id/orderLinesDetails_txtAmount"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_below="@+id/orderLinesDetails_txtDetailsamount"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif"
            android:gravity="center_vertical|end"
            android:hint="@string/Amount"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif" />

    </TableRow>

    <TableRow android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/orderLinesDetails_txtDetailsorderDate"
            android:layout_width="137dp"
            android:layout_height="30dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/orderdate" />

        <TextView
            android:id="@+id/orderLinesDetails_txtOrderDate"
            android:layout_width="200dp"
            android:layout_height="30dp"
            android:layout_below="@+id/orderLinesDetails_txtDetailsorderDate"
            android:layout_alignParentStart="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:fontFamily="sans-serif"
            android:hint="@string/OrderDate"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="serif" />


    </TableRow>
</TableLayout>