<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context=".OutletActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/mark_customer_activity_complete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            app:backgroundTint="@color/common_google_signin_btn_text_dark_pressed"
            app:fabSize="normal"
            app:srcCompat="@drawable/okay_24dp" />

        <CheckBox
            android:id="@+id/outlet_stockcall"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:enabled="true"
            android:text="@string/call_Objectives" />

        <CheckBox
            android:id="@+id/outlet_stocktake"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignStart="@+id/outlet_stocktake"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:enabled="true"
            android:text="@string/stock_Take" />

        <CheckBox
            android:id="@+id/outlet_chkGenerateOrder"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignEnd="@+id/outlet_stocktake"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:enabled="true"
            android:text="@string/generate_Order" />

        <CheckBox
            android:id="@+id/outlet_chkInvoicing"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignStart="@+id/outlet_stocktake"
            android:layout_alignParentTop="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:enabled="true"
            android:text="@string/invoicing" />

        <CheckBox
            android:id="@+id/outlet_chkDeliveryOrder"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignEnd="@+id/outlet_stocktake"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:enabled="true"
            android:text="@string/deliver_order" />

        <CheckBox
            android:id="@+id/outlet_chkPaymentCollection"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignStart="@+id/outlet_stocktake"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:enabled="true"
            android:text="@string/payment" />

        <CheckBox
            android:id="@+id/outlet_chkMerchandising"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignEnd="@+id/outlet_stocktake"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:enabled="true"
            android:text="@string/merchandising" />

        <CheckBox
            android:id="@+id/outlet_chkAssetTracking"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignStart="@+id/outlet_stocktake"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:enabled="true"
            android:text="@string/asset_Tracking" />

        <CheckBox
            android:id="@+id/outlet_chkCompleteCall"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignStart="@+id/outlet_stocktake"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:enabled="true"
            android:text="@string/complete_Call" />

        <Button
            android:id="@+id/activity_close_btn"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="8dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/close"
            android:textColor="@color/common_google_signin_btn_text_dark_default"
            android:textSize="18sp"
            android:textStyle="normal|bold"
            android:typeface="serif"/>

    </LinearLayout>

</ScrollView>