<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView30"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/place_autocomplete_prediction_secondary_text"
        android:fontFamily="serif-monospace"
        android:gravity="center"
        android:text="@string/order_notes"
        android:textColor="@color/common_google_signin_btn_text_dark_default"
        android:textSize="20dp"
        android:textStyle="normal|bold"
        android:typeface="monospace" />

    <EditText
        android:id="@+id/sales_order_note_pad"
        android:layout_width="match_parent"
        android:layout_height="168dp"
        android:layout_weight=".70"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/notes_pl"
        android:inputType="textMultiLine"
        android:textColor="@color/common_google_signin_btn_text_dark_focused"
        android:textSize="14sp"
        android:textStyle="normal"
        android:typeface="serif" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/save_note_pad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/save"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textOff="@string/save"
            android:textOn="@string/clear_and_close"
            android:textSize="14sp"
            android:textStyle="normal|bold"
            android:typeface="sans" />

        <Button
            android:id="@+id/close_note_pad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/close"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textOff="@string/save"
            android:textOn="@string/clear_and_close"
            android:textSize="14sp"
            android:textStyle="normal|bold"
            android:typeface="sans" />

    </LinearLayout>

</LinearLayout>
