<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:orientation="vertical">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        app:cardCornerRadius="15dp">

        <TextView
            android:id="@+id/stock_tv_product"
            android:layout_width="140dp"
            android:layout_height="50dp"
            android:layout_marginStart="4dp"
            android:layout_weight="1"
            android:gravity="top"
            android:text="@string/ProductName" />

        <TextView
            android:id="@+id/stock_tv_totals"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_marginStart="150dp"
            android:layout_weight="1"
            android:gravity="top"
            android:text="@string/Totals" />

        <RelativeLayout
            android:id="@+id/stock_relativelayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:visibility="visible">


            <TextView
                android:layout_width="140dp"
                android:layout_height="30dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:gravity="top"
                android:text="@string/productname"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/stock_tv_product2"
                android:layout_width="140dp"
                android:layout_height="30dp"
                android:layout_marginStart="150dp"
                android:layout_weight="1"
                android:gravity="top"
                android:text="@string/ProductName" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:gravity="top"
                android:text="@string/expiredtv"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/stock_tv_expired"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginStart="150dp"
                android:layout_marginTop="30dp"
                android:layout_weight="1"
                android:gravity="top"
                android:text="@string/expired" />

            <TextView
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginTop="60dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-condensed"
                android:gravity="top"
                android:text="@string/Damaged"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/stock_tv_damaged"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:layout_marginStart="150dp"
                android:layout_marginTop="60dp"
                android:layout_weight="1"
                android:gravity="top"
                android:text="@string/damaged" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>


</GridLayout>