<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="top">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/deliverOrders_txtProductName"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/item"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" />


        <TextView
            android:id="@+id/deliverOrders_txtQty"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/Qty"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" />

        <TextView
            android:id="@+id/deliverOrders_txtUnitPrice"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:padding="10dp"
            android:text="@string/Price"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" />


        <EditText
            android:id="@+id/deliverOrders_txtCount"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autofillHints=""
            android:hint="@string/Count"
            android:inputType="number"
            android:padding="10dp"
            android:textColor="@color/common_google_signin_btn_text_dark_focused"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/deliverOrders_txtAmount"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:background="@color/columns"
            android:padding="10dp"
            android:text="@string/Amount" />

        <CheckBox
            android:id="@+id/deliverOrders_chkStatus"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="8dp"
            android:padding="10dp"
            android:textColor="@color/common_google_signin_btn_text_dark_focused" />
    </LinearLayout>

</RelativeLayout>